k8s/chatservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatservice
  labels:
    app: chatservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatservice
  template:
    metadata:
      labels:
        app: chatservice
    spec:
      containers:
        - name: chatservice
          image: maxim58r/chatservice:latest
          ports:
            - containerPort: 8080
