k8s/chatservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatservice
spec:
  type: ClusterIP
  selector:
    app: chatservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
